Fixing Alignment issues

--- a/style.v2.css
+++ b/style.v2.css
@@ -1,7 +1,6 @@
 body {
   margin-top: 50px;
-  width: 98%;
-  height: 98%;
+
   font-family: 'IBM Plex Sans', sans-serif;
 }
 
@@ -53,6 +52,9 @@ input[type="checkbox"] {
 
 textarea {
   margin-top: 10px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+       box-sizing: border-box;
 }
 
 .invisible {
